Regex fixes